docs: agregando la documetacion de la relacion post - tag
