# src/swagger-output.json
@@ -29,6 +29,241 @@
     }
   ],
   "paths": {
+    "/publicaciones/": {
+      "get": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Obtener todos las publicaciones del sistema",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Publicaciones retornados exitosamente."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Crea un nuevo usuario en el sistema",
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Publiicacion creada exitosamente."
+          },
+          "400": {
+            "description": "El body no esta completo."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PublicacionNueva"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/publicaciones/{id}": {
+      "get": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Obtiene los detalles de una publicacion por su ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID cadena de texto de la publicacion a buscar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Publicacion encontrada exitosamente."
+          },
+          "404": {
+            "description": "Publicacion no encontrada."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Editar los datos de una publicacion por su ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID cadena de texto de la publicacion a buscar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Publicacion modificada con exito."
+          },
+          "400": {
+            "description": "El body no esta completo"
+          },
+          "404": {
+            "description": "Publicacion no encontrada en la base de datos."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PublicacionNueva"
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Elimina una publicacion del sistema por su id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID cadena de texto de la publicacion a eliminar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Publicacion eliminada exitosamente."
+          },
+          "404": {
+            "description": "Publicacion no encontrada."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/publicaciones/{id}/etiquetas": {
+      "get": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Obtener etiquetas de una publicacion por su ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "postId",
+            "in": "path",
+            "description": "ID de la publicacion",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "tagId",
+            "in": "path",
+            "description": "ID de la etiqueta",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Etiqueta asociada exitosamente."
+          },
+          "404": {
+            "description": "Publicacion o Etiqueta no encontrada."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/publicaciones/{postId}/etiquetas/{tagId}": {
+      "post": {
+        "tags": [
+          "Publicaciones"
+        ],
+        "summary": "Agregar etiqueta por id a una publicacion por su ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID de la publicacion"
+          },
+          {
+            "name": "tagId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID de la etiqueta"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Etiqueta asociada exitosamente."
+          },
+          "404": {
+            "description": "Publicacion o Etiqueta no encontrada."
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/usuarios/": {
       "get": {
         "tags": [
